update product overview page✨

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@
     --color-primary:#fffaf5 ;
     --color-secondary:#EBD6FB ;
     --color-acsent:#821742 ;
-    --font-main:"Inter", sans-serif;
+    --font-main:"Domine", serif;
 }
