--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
     --color-acsent:#821742 ;
     --font-main:"Domine", serif;
 }
+@media print {
+  thead tr {
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+  }
+}
