--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html {
+  overflow-y: scroll;
+  scrollbar-width: none; 
+}
+
+html::-webkit-scrollbar {
+  display: none; 
+}
+
 body {
   font-family: var(--font-main);
   background-color: var(--color-primary);
